[solar] fixed barchart alignement

--- a/solar/style/less/elements/illu.less
+++ b/solar/style/less/elements/illu.less
@@ -216,12 +216,12 @@
 
     .bar-value {
         flex-shrink: 0;
-        width: 6ch;
-        padding-left: 1ch;
+        width: 5ch;
+        margin: 0 1ch;
+        text-align: right;
     }
 
-    .bar-label,
-    .bar-value {
+    .bar-label {
         text-align: left;
     }
 
